# MaaAssistantArknights

./: .all-contributorsrc  .clang-format  .clangd  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .last-checked-commit  .linkspector.yml  .maabundlerignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  404.html  CHANGELOG.md  CHANGELOG_MAA.md  CHANGELOG_RES.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CNAME  CODE_OF_CONDUCT.md  DependencySetup_依赖库安装.bat  KeepDrinking.html  LICENSE.spdx  MAA.sln  MAA.sln.DotSettings  MeoAssistance.sln  MeoAssistantArknights.sln  MeoAssistantArknights.sln.DotSettings  README-en.md  README.md  README_en-US.md  README_ja-JP.md  README_ko-KR.md  README_zh-TW.md  SECURITY.md  TaskSorter.py  agent_orchestrator_Version2.py  (+37 more)
src/Cpp/: CMakeLists.txt  MaaSample.slnf  MaaSample.vcxproj  MaaSample.vcxproj.filters  Sample.vcxproj  Sample.vcxproj.filters  main.cpp
src/MaaCore/: Assistant.cpp  Assistant.h  AsstCaller.cpp  CMakeLists.txt  Controller.cpp  Controller.h  Directory.Build.props  Directory.Build.targets  InstHelper.cpp  InstHelper.h  LDExtras.cpp  LDExtras.h  MaaCore.vcxproj  MaaCore.vcxproj.filters  README.md  RoguelikeData.cpp  Status.cpp  Status.h  Watchdog.h  meojson.natvis  re-include.py
src/MaaCore/Common/: AsstBattleDef.h  AsstConf.h  AsstInfrastDef.h  AsstMsg.h  AsstTypes.h  AsstVersion.h
src/MaaCore/Config/: AbstractConfig.cpp  AbstractConfig.h  AbstractConfigWithTempl.h  AbstractResource.h  GeneralConfig.cpp  GeneralConfig.h  OnnxSession.cpp  OnnxSession.h  OnnxSessions.cpp  OnnxSessions.h  ResourceLoader.cpp  ResourceLoader.h  TaskData.cpp  TaskData.h  TemplResource.cpp  TemplResource.h
src/MaaCore/Config/Miscellaneous/: AvatarCacheManager.cpp  AvatarCacheManager.h  BattleDataConfig.cpp  BattleDataConfig.h  CharSkillConfig.cpp  CharSkillConfig.h  CopilotConfig.cpp  CopilotConfig.h  InfrastConfig.cpp  InfrastConfig.h  ItemConfig.cpp  ItemConfig.h  OcrConfig.cpp  OcrConfig.h  OcrPack.cpp  OcrPack.h  RecruitConfig.cpp  RecruitConfig.h  RoleConfig.cpp  RoleConfig.h  SSSCopilotConfig.cpp  SSSCopilotConfig.h  StageDropsConfig.cpp  StageDropsConfig.h  TilePack.cpp  TilePack.h
src/MaaCore/Config/Roguelike/: RoguelikeCiphertextBoardConfig.cpp  RoguelikeCiphertextBoardConfig.h  RoguelikeCollapsalParadigmConfig.cpp  RoguelikeCollapsalParadigmConfig.h  RoguelikeCopilotConfig.cpp  RoguelikeCopilotConfig.h  RoguelikeFoldartalConfig.cpp  RoguelikeFoldartalConfig.h  RoguelikeMapConfig.cpp  RoguelikeMapConfig.h  RoguelikeRecruitConfig.cpp  (+7 more)
src/MaaCore/Controller/: AVDExtras.cpp  AVDExtras.h  AdbController.cpp  AdbController.h  ControlScaleProxy.cpp  ControlScaleProxy.h  Controller.cpp  Controller.h  ControllerAPI.h  ControllerAdbLite.cpp  ControllerAdbLite.h  ControllerFactory.h  ControllerPosix.cpp  ControllerPosix.h  ControllerWin32.cpp  ControllerWin32.h  CustomController.cpp  CustomController.h  DroidCastController.cpp  DroidCastController.h  LDExtras.cpp  LDExtras.h  MaaFwAdbController.cpp  MaaFwAdbController.h  MaaFwControlUnitInterface.h  MaaThriftController.cpp  MaaThriftController.h  MaatouchController.cpp  MaatouchController.h  MacSCKHelper.h  MacSCKHelper.mm  MinitouchController.cpp  MinitouchController.h  MumuExtras.cpp  MumuExtras.h  NativeController.h  PlayToolsController.cpp  PlayToolsController.h  PlayToolsIPCController.cpp  PlayToolsIPCController.h  (+11 more)
src/MaaCore/Task/: AbstractTask.cpp  AbstractTask.h  AbstractTaskPlugin.cpp  AbstractTaskPlugin.h  BattleHelper.cpp  BattleHelper.h  InterfaceTask.cpp  InterfaceTask.h  PackageTask.cpp  PackageTask.h  PocketpyTask.cpp  PocketpyTask.h  ProcessTask.cpp  ProcessTask.h  ReportDataTask.cpp  ReportDataTask.h
src/MaaCore/Ui/: BattleQuickFormation.cpp  BattleQuickFormation.h  SupportList.cpp  SupportList.h
src/MaaCore/Utils/: Algorithm.hpp  Codec.cpp  Codec.h  DebugImageHelper.hpp  Demangle.hpp  Encoding.cpp  Encoding.h  ExceptionStacktrace.hpp  File.hpp  Http.hpp  ImageIo.hpp  JsonMisc.hpp  LibraryHolder.hpp  Locale.hpp  LogControl.cpp  LogControl.hpp  Logger.hpp  Meta.hpp  NoWarningCPR.h  NoWarningCV.h  NoWarningCVMat.h  NullStreambuf.hpp  Platform.hpp  Ranges.hpp  SingletonHolder.hpp  StringMisc.hpp  Time.hpp  WorkingDir.hpp
src/MaaCore/Vision/: AbstractImageAnalyzer.cpp  AbstractImageAnalyzer.h  BestMatchImageAnalyzer.cpp  BestMatchImageAnalyzer.h  BestMatcher.cpp  BestMatcher.h  FeatureMatcher.cpp  FeatureMatcher.h  HashImageAnalyzer.h  Hasher.cpp  Hasher.h  MatchImageAnalyzer.cpp  MatchImageAnalyzer.h  Matcher.cpp  Matcher.h  MultiMatchImageAnalyzer.cpp  MultiMatchImageAnalyzer.h  MultiMatcher.cpp  MultiMatcher.h  MultiTemplMatcher.cpp  MultiTemplMatcher.h  OCRer.cpp  OCRer.h  OcrImageAnalyzer.cpp  OcrImageAnalyzer.h  OcrWithFlagTemplImageAnalyzer.cpp  OcrWithFlagTemplImageAnalyzer.h  OcrWithPreprocessImageAnalyzer.cpp  OcrWithPreprocessImageAnalyzer.h  OnnxHelper.cpp  OnnxHelper.h  OnnxRuntimeImageAnalyzer.cpp  OnnxRuntimeImageAnalyzer.h  RegionOCRer.cpp  RegionOCRer.h  StageDropsImageAnalyzer.h  TemplDetOCRer.cpp  TemplDetOCRer.h  VisionHelper.cpp  VisionHelper.h  (+1 more)
src/MaaWineBridge/MaaCoreForwarder/: CMakeLists.txt  MaaCore.spec  dl_maacore.c  dl_maacore.h  dlshim.h  entry.c  maacore.c  task_queue.c  task_queue.h  task_queue_wine.c  task_queue_wine.h
src/MaaWineBridge/MaaDesktopIntegration/: CMakeLists.txt  MaaDesktopIntegration.spec  fontconfig.c  gdk-pixbuf.c  gobject.c  main_loop.c  main_loop.h  notification.c
src/Rust/: AsstCaller.h  AsstPort.h  Cargo.toml  Readme.md  bind.rs  build.rs  server_config.json
src/Rust/src/: config.rs  main.rs
src/dart/linux/: CMakeLists.txt
src/dart/native/: CMakeLists.txt  callback.c
tools/ResourceUpdater/: .gitignore  CMakeLists.txt  CMakePresets.json  JSON.py  ResourceUpdater.sln  ResourceUpdater.vcxproj  ResourceUpdater.vcxproj.filters  Tasks_Sorter.py  clone_data_repo.ps1  clone_data_repo.sh  hash.py  main.cpp  penguin_stages.ps1  penguin_stages.sh  res_updater  validator.ps1  version.ps1  version.sh  version.zsh
tools/ResourceUpdaterUnix/: CMakeLists.txt  clone_data.sh  main.cpp
(+26959 files in other folders)
