[package]
authors = ["yuanyan3060"]
name = "maa_server"
version = "0.0.1"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
chrono = "0.4.19"
lazy_static = "1.4.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
sled = "0.34.7"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
